# learn

./: .gitignore  LICENSE  README.md
cmake/: .gitignore  CMakeLists.txt  README.md  generate.sh  main.cpp  test.h
cmake/tmpl/: test.cpp.tmpl
gtest/: Makefile  README.md  TestA.h  TestA_test.cpp
link_symbol/: Makefile  README.md  key_event.cpp  key_event.h  main.cpp  qvfb.cpp  touch_event.cpp  touch_event.h
pthread/: Makefile  README.md  main.c
python/: README.md  dynamic_load.py  write_file.py
python/modules/: module_a.py  module_b.py  module_c.py
