CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

SET(EXECUTE_SRCS
	main.cpp
	test.cpp
)

SET_SOURCE_FILES_PROPERTIES(test.cpp PROPERTIES GENERATED TRUE)

ADD_EXECUTABLE(test.out ${EXECUTE_SRCS})

SET(TMPLS
	${PROJECT_SOURCE_DIR}/tmpl/test.cpp.tmpl
	${PROJECT_SOURCE_DIR}/tmpl/test.h.tmpl
)


ADD_CUSTOM_COMMAND(OUTPUT test.cpp
	COMMAND rm -f test.cpp test.h
	COMMAND ${PROJECT_SOURCE_DIR}/generate.sh ${PROJECT_SOURCE_DIR}/tmpl
	COMMAND mv ${PROJECT_BINARY_DIR}/test.h ${PROJECT_SOURCE_DIR}
	DEPENDS ${TMPLS}
	COMMENT Create test.cpp
	VERBATIM
)

ADD_CUSTOM_TARGET(T DEPENDS test.cpp)

ADD_DEPENDENCIES(test.out T)
